--- a/userHomePage.html
+++ b/userHomePage.html
@@ -24,7 +24,7 @@
 
         <ul>
             <li><a href="login.html">Home</a></li>
-            <li><a href="login.html">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="login.html">Packages</a></li>
             <li><a href="login.html">Sign Up</a></li>
 
