Images folder and rough designer page

--- a/packages.html
+++ b/packages.html
@@ -24,8 +24,8 @@
 
         <ul>
             <li><a href="login.html">Home</a></li>
-            <li><a href="login.html">About</a></li>
-            <li><a href="login.html">Packages</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="packages.html">Packages</a></li>
             <li><a href="login.html">Sign Up</a></li>
 
         </ul>
