Moved splash image and changed src links

--- a/login.html
+++ b/login.html
@@ -24,8 +24,8 @@
 
         <ul>
             <li><a href="login.html">Home</a></li>
-            <li><a href="login.html">About</a></li>
-            <li><a href="login.html">Packages</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="packages.html">Packages</a></li>
             <li><a href="login.html">Sign Up</a></li>
 
         </ul>
@@ -46,7 +46,7 @@
         <div class="center">
             <div style="
                 height:900px; width: 1200px; 
-                background-image: url(bluesplash.png);
+                background-image: url(images/bluesplash.png);
                 background-repeat: no-repeat;
                 background-position: center center;
                 background-size: cover;
