--- a/packages.html
+++ b/packages.html
@@ -37,7 +37,7 @@
         <div class="center">
             <div class="background" style="
                 height:700px; width: 900px; 
-                background-image: url(bluesplash.png);
+                background-image: url(images/bluesplash.png);
                 background-repeat: no-repeat;
                 background-position: center center;
                 background-size: cover;
