--- a/userHomePage.html
+++ b/userHomePage.html
@@ -19,16 +19,34 @@
 
 <body>
 
-    <nav class="menu">
-
-        <ul>
-            <li><a href="login.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="packages.html">Packages</a></li>
-            <li><a href="login.html">Sign Up</a></li>
-
-        </ul>
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-#D7D7D7">
+        <div class="d-flex flex-grow-1">
+            <span class="w-100 d-lg-none d-block"><!-- hidden spacer to center brand on mobile --></span>
+            <a class="navbar-brand" href="#">
+                indy.
+            </a>
+            <div class="w-100 text-right">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar7" >
+                    <span class="navbar-toggler-icon" ></span>
+                </button>
+            </div>
+        </div>
+        <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar7">
+            <ul class="navbar-nav ml-auto flex-nowrap">
+                <li class="nav-item">
+                    <a href="login.html" class="nav-link">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a href="about.html" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="packages.html" class="nav-link">Packages</a>
+                </li>
+                <li class="nav-item">
+                    <a href="login.html" class="nav-link">Sign Up</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     
     <div class="row">
