--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar7">
             <ul class="navbar-nav ml-auto flex-nowrap">
                 <li class="nav-item">
-                    <a href="login.html" class="nav-link">Login</a>
+                    <a href="login.php" class="nav-link">Login</a>
                 </li>
                 <li class="nav-item">
                     <a href="about.html" class="nav-link">About</a>
@@ -43,7 +43,7 @@
                     <a href="packages.html" class="nav-link">Packages</a>
                 </li>
                 <li class="nav-item">
-                    <a href="login.html" class="nav-link">Sign Up</a>
+                    <a href="login.php" class="nav-link">Sign Up</a>
                 </li>
             </ul>
         </div>
