--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                     <a href="packages.html" class="nav-link">Packages</a>
                 </li>
                 <li class="nav-item">
-                    <a href="login.html" class="nav-link">Sign Up</a>
+                    <a href="login.php" class="nav-link">Sign Up</a>
                 </li>
             </ul>
         </div>
