changes the package

--- a/packages.html
+++ b/packages.html
@@ -99,11 +99,11 @@
             <form>
                 <h1>Deluxe</h1>
                 <p>
-                    Up to 4 Rooms<br>
+                    1 Room<br>
                     Size: Any Size<br>
                     Design Revisions: Yes<br>
                     Furniture Purchase Links Available<br>
-                    <h5>Price: $300.00</h5>
+                    <h5>Price: $175.00</h5>
                 </p>
                 <button type="submit">Select</button>
             </form><br>
