--- a/packages.html
+++ b/packages.html
@@ -97,7 +97,7 @@
 
         <div class="package">
             <form>
-                <h1>Deluxe</h1>
+                <h1>Luxe</h1>
                 <p>
                     1 Room<br>
                     Size: Any Size<br>
