--- a/packages.html
+++ b/packages.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-#D7D7D7">
         <div class="d-flex flex-grow-1">
             <span class="w-100 d-lg-none d-block"><!-- hidden spacer to center brand on mobile --></span>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="login.php">
                 indy.
             </a>
             <div class="w-100 text-right">
